trabalhando no sobre

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,6 +8,7 @@ body {
     /* background-color: ; */
     font-family: Helvetica;
     background: rgb(54, 54, 54);
+    color: whitesmoke;
 }
 
 .btn-default{
