--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,7 +6,7 @@
 
 body {
     /* background-color: ; */
-    font-family: Helvetica;
+    font-family: Segoe UI;
     background: rgb(54, 54, 54);
     color: whitesmoke;
 }
