--- a/styles/header.css
+++ b/styles/header.css
@@ -2,6 +2,10 @@ header {
     width: 100%;
     padding: 28px 8%;
     box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.5);
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: rgb(54, 54, 54);    
 }
 
 #navbar {
@@ -12,7 +16,7 @@ header {
 }
 
 #logo {
-    color: rgb(139, 22, 202);
+    color: #b79bd0;
 }
 
 #nav_list {
