--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,11 +4,16 @@
     box-sizing: border-box;
 }
 
+img {
+    object-fit: fill !important;
+}
+
 body {
     /* background-color: ; */
     font-family: Segoe UI;
     background: rgb(54, 54, 54);
     color: whitesmoke;
+    font-size: 1rem;
 }
 
 .btn-default{
@@ -22,8 +27,4 @@ body {
     font-weight: 600;
     box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.1);
     cursor: pointer;
-}
-
-code {
-    font-size: 16px;
 }
